# uv-monorepo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/apps/: README.md
src/core/: urls.py
src/core/core/: settings.py
src/core/settings/: base.py  local.py  production.py  test.py
src/libs/: README.md
