[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-monorepo"
version = "0.1.0"
description = "Django monorepo project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "django>=4.2.0",
    "psycopg2-binary>=2.9.5",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.10.0",
    "mypy>=1.6.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "PL", "A"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
EOLDJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = "test_*.py"
testpaths = ["tests"]
